--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.4.1",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
+    "react-native-facebook-account-kit": "^0.9.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-touch-id": "^4.0.1"
   },
   "devDependencies": {
